feat: Migrate away from deprecated Spring Security configuration